[gd_scene load_steps=10 format=3 uid="uid://clhjj6y2kg2ux"]

[ext_resource type="Script" path="res://Player/Core.gd" id="1_05bff"]
[ext_resource type="Texture2D" uid="uid://b3n25hx24s1x5" path="res://Textures/Environment/Pixel_Core_In_the_Ground-Sheet.png" id="2_4i60h"]
[ext_resource type="PackedScene" uid="uid://cbibtl5k17ewk" path="res://Overlap/Hurtbox.tscn" id="2_lcxv0"]
[ext_resource type="Script" path="res://Scripts/Stats/Stats.gd" id="4_ww6hr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_achx4"]
height = 85.0

[sub_resource type="Animation" id="Animation_gkdpb"]
resource_name = "Flash"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_tfyhc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_laxfy"]
_data = {
"Flash": SubResource("Animation_gkdpb"),
"RESET": SubResource("Animation_tfyhc")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sg7dx"]
radius = 46.0
height = 148.0

[node name="Core" type="Node2D" groups=["Core"]]
y_sort_enabled = true
script = ExtResource("1_05bff")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4i60h")
offset = Vector2(3, 1)
hframes = 4

[node name="Hurtbox" parent="." instance=ExtResource("2_lcxv0")]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_achx4")

[node name="Stats" type="Node" parent="."]
script = ExtResource("4_ww6hr")
max_health = 20

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 577
collision_mask = 98

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-47, -1, 0, -18, 47, -2, 0, 14)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_laxfy")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8192
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_sg7dx")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
